--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         </div>
                         <!-- ngIf: ViewModel.StudentSchoolEnrollment --><div class="info ng-scope" ng-if="ViewModel.StudentSchoolEnrollment">
                             <div class="id ng-binding" ng-bind="ViewModel.StudentSchoolEnrollment.LocalId">99</div>
-                            <div class="name ng-binding" ng-bind="ViewModel.StudentSchoolEnrollment.StudentPersonal.Base.Name.FullName" ng-style="{'font-size':ViewModel.StudentSchoolEnrollment.StudentPersonal.Base.Name.FullName.split(' ').length>3?'12px':'16px'}" style="font-size: 16px;">SARP TIĞRAK</div>
+                            <div class="name ng-binding" ng-bind="ViewModel.StudentSchoolEnrollment.StudentPersonal.Base.Name.FullName" ng-style="{'font-size':ViewModel.StudentSchoolEnrollment.StudentPersonal.Base.Name.FullName.split(' ').length>3?'12px':'16px'}" style="font-size: 16px;">John Doe</div>
                             <div class="btn-group" id="enrollmentChoser1">
                                 <button ng-disabled="ViewModel.IsBusy" class="btn btn-light btn-sm dropdown-toggle" type="button" style="font-size: 12px;" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" control-id="ControlID-7">
                                     <span ng-bind="ViewModel.StudentSchoolEnrollment.SchoolYear.Description" class="ng-binding">2024-2025 </span>
