--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
           My Socials:
         </div>
-          <i class="fa-brands fa-github fa-fade" style="padding-left: 2rem;"></i>
+          <a href="https://github.com/sarpgknull"><i class="fa-brands fa-github fa-fade" style="padding-left: 2rem;"></i></a>
         <div>
           
         </div>
